<resources>
    <string name="app_name">Comment Bot</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_rate_app">Rate app</string>
    <string name="menu_share_app">Share app</string>
    <string name="menu_contact">Contact</string>
    <string name="accessibility_service_description">Please enable accessibility permission for the
        Comment Bot perform automated click gestures.\n\nNo personal information is collected by Comment Bot.</string>
    <string name="accessibility_service_name">Comment Bot</string>
    <string-array name="unity_time">
        <item>s</item>
        <item>min</item>
    </string-array>
    <string name="toast_accessibility_service_is_not_connected">AccessibilityService of this device is not properly connected</string>
    <string name="youtube_tutorial_link">https://youtu.be/tw-_GwFCueE</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="pc_version" translatable="false">https://amadorprog.com</string>
    <string name="data_base_disclosure_acceptation" translatable="false">disclosure_acceptation</string>
    <string name="data_base_used_quantity" translatable="false">used_quantity</string>
    <string name="data_base_temporary_enabled" translatable="false">temporary_enabled</string>
    <string name="data_base_typingfield" translatable="false">typingfield</string>
    <string name="data_base_sendfield" translatable="false">sendfield</string>
    <string name="data_base_spacebar" translatable="false">spacebar</string>
    <string name="data_base_capslock" translatable="false">capslock</string>
    <string name="data_base_specialchar" translatable="false">specialchar</string>
    <string name="data_base_breakline" translatable="false">breakline</string>
    <string name="data_base_evaluation_request" translatable="false">evaluation_request</string>
    <string name="data_base_user_code" translatable="false">user_code</string>
    <string name="main_error_title">Error</string>
    <string name="main_error">An error has occurred. Check your internet connection or wait a few moments.</string>
    <string name="main_loading">Checking...</string>
    <string name="main_invalid_email">Invalid email.</string>
    <string name="main_basic_settings">Basic settings</string>
    <string name="main_msg_group">Message group:</string>
    <string name="main_delay_time_simple">Delay:</string>
    <string name="main_hint_delay_time_simple">20</string>
    <string name="main_check_random_order">Random order:</string>
    <string name="main_button_config_coordinates">Coordinates</string>
    <string name="main_advanced_settings">Advanced settings</string>
    <string name="main_check_random_delay">Random delay:</string>
    <string name="main_delay_time_max">Maximum:</string>
    <string name="main_hint_delay_time_max">30</string>
    <string name="main_delay_time_min">Minimum:</string>
    <string name="main_hint_delay_time_min">10</string>
    <string name="main_check_infinite_loop">Infinite repeat:</string>
    <string name="main_enable_clicker">Enable Comment Bot</string>
    <string name="main_button_enable_clicker">Enable</string>
    <string name="main_button_share_ad">Share</string>
    <string name="main_other_options">Others</string>
    <string name="main_button_tutorial">Tutorial</string>
    <string name="main_warning">Warning</string>
    <string name="main_enable_accessibility_service">Enable accessibility permission for the
        Comment Bot perform automated click gestures.</string>
    <string name="main_enable_overlay_permission">Enable draw over other apps permission so that Comment Bot can act.</string>
    <string name="main_prominent_disclosure">Accessibility Service</string>
    <string name="main_prominent_disclosure_message">The main feature of this app use the Accessibility Service API to simulate clicks.
    \n\n1. Why does this app need to use the Accessibility Services API?\nWe use this method to simulate click.\n\n
    2. Does this app collect and/or share personal or sensitive data using the accessibility capabilities?\nNo user\'s personal information is collected.\n\n
    If you agree to use it, click on Agree.</string>
    <string name="main_prominent_disclosure_positive_button_title">I agree</string>
    <string name="main_prominent_disclosure_negative_button_title">I disagree</string>
    <string name="main_error_alert_title">Almost there!</string>
    <string name="main_error_delay_limit">The delay must be within the range of 1 second to 300 seconds.</string>
    <string name="main_error_delay_max_min">The maximum delay must be greater than the minimum delay.</string>
    <string name="main_error_messages_db">Your messages are not set up yet!</string>
    <string name="main_error_coordinates_db">Your coordinates are not set yet!</string>
    <string name="main_custom_dialog_permissions_accessibility_services_title">Accessibility Service</string>
    <string name="main_custom_dialog_permissions_draw_over_other_apps_title">Overlay permission</string>
    <string name="main_custom_dialog_permissions_accessibility_services_link">Watch the tutorial</string>
    <string name="main_menu_contact_title">Contact</string>
    <string name="main_menu_contact">Send an email to <b>arthur2000jose@gmail.com</b> to questions, suggestions and others matters.</string>
    <string name="main_advertise_your_product"><u>Want to advertise your product here?</u></string>
    <string name="main_marketing_contact">Send an email to arthur2000jose@gmail.com to know more and get a quotation.</string>
    <string name="main_button_premium">Premium experience</string>
    <string name="main_button_pc_version">PC version</string>
    <string name="main_problems_solution"><u>Has the app been malfunctioning?</u></string>
    <string name="problems_solution_text">If the app malfunctions, <b>turn access permission off and on again</b>. If it still doesn\'t work, restart your phone.</string>
    <string name="problems_solution_go_to_accessibility_settings"><u>Go to Accessibility Settings</u></string>
    <string name="main_become_premium">Become Premium</string>
    <string name="main_evaluation_yes">Rate</string>
    <string name="main_evaluation_no">No</string>
    <string name="main_evaluation_later">Later</string>
    <string name="main_evaluation_title">Rate app</string>
    <string name="main_evaluation_text">Are you enjoying the app? Rate us on the Play Store. =)</string>
    <string name="main_version">Version</string>
    <string name="main_user_code">User code:</string>
    <string name="main_lock_dialog_title">Free limit</string>
    <string name="main_lock_dialog">You have reached your free limit. To continue using this bot, your account must be Premium or you can use a friend code.</string>
    <string name="main_lock_became_premium">Premium subscription</string>
    <string name="main_lock_friend_feature">Type friend code</string>
    <string name="main_lock_friend_feature_title">Friend code</string>
    <string name="main_lock_friend_feature_text">Ask your friend to download this app and get his code at the bottom of the screen. Then type this here.</string>
    <string name="main_lock_friend_feature_check">Check</string>
    <string name="main_lock_friend_feature_response_success">Very well! You can use the bot again.</string>
    <string name="main_lock_friend_feature_response_invalid">Invalid code.</string>
    <string name="main_lock_friend_feature_response_already_used">This code has already been used.</string>
    <string name="main_lock_friend_feature_response_unknown_error">Unknown error. Check your Internet connection.</string>
    <string name="main_rewarded_feature_title">Attention</string>
    <string name="main_rewarded_feature_instruction">Please watch all this ad to unlock the bot.</string>
    <string name="messages_editor_group_already_exist">This group already exists. Please choose another name for the group.</string>
    <string name="messages_editor_alert_empty_title">Almost there!</string>
    <string name="messages_editor_alert_empty_message">Type your messages.</string>
    <string name="messages_editor_alert_empty_groupname">Name your message group.</string>
    <string name="messages_editor_instr_title">Instructions</string>
    <string name="messages_editor_instr">Skip line to represent the end of a message, as in
    example bellow:\n\nFirst message\nSecond message\nThird message</string>
    <string name="messages_editor_delete_groupname_title">Attention!</string>
    <string name="messages_editor_delete_groupname">Click OK to delete this message group:</string>
    <string name="messages_editor_add_group_name">Group name:</string>
    <string name="messages_editor_button_save_message">Save</string>
    <string name="messages_editor_button_instr_text_message">Instructions</string>
    <string name="messages_editor_not_save_title">Warning</string>
    <string name="messages_editor_not_save_text">Your changes have not been saved. Would you like to save before leaving?</string>
    <string name="config_coordinates_instr_title">Attention</string>
    <string name="config_coordinates_instr">To record keyboard coordinates, drag the target to
        the symbol corresponding to the one requested by the table above.</string>
    <string name="config_coordinates_abort">Abort</string>
    <string name="config_coordinates_start">Start</string>
    <string name="config_coordinates_display_capslock">Caps Lock</string>
    <string name="config_coordinates_display_space_bar">Space Bar</string>
    <string name="config_coordinates_display_special_char">!#1 or ?123</string>
    <string name="config_coordinates_toast_error_record_capslock">Click on CAPS LOCK.</string>
    <string name="config_coordinates_toast_error_record_special_char">Click on !#1 or ?123</string>
    <string name="config_coordinates_toast_error_register_space_bar">Click on spacebar</string>
    <string name="config_coordinates_success_register_title">Ready</string>
    <string name="config_coordinates_success_register">Registered coordinates!</string>
    <string name="config_coordinates_register_capslock">Record the coordinate corresponding to Caps Lock.</string>
    <string name="config_coordinates_register_special_char">Write the coordinate related to special characters (!#1 or ?123).</string>
    <string name="config_coordinates_register_space_bar">Write the coordinate corresponding to the spacebar.</string>
    <string name="config_coordinates_warning">Warning</string>
    <string name="config_coordinates_enable_accessibility_service">Enable accessibility permission for the
        Comment Bot perform automated click gestures.</string>
    <string name="config_coordinates_enable_overlay_permission">Enable draw over other apps permission so that Comment Bot can act.</string>
    <string name="config_coordinates_button_tutorial">Tutorial</string>
    <string name="list_messages_group_list_group">Group list</string>
    <string name="list_messages_group_lock_dialog_title">Become Premium</string>
    <string name="list_messages_group_lock_dialog_text">To register more message groups, become Premium.</string>
    <string name="list_messages_group_lock_dialog_understand">I understood</string>
    <string name="list_messages_group_lock_dialog_become_premium">Become Premium</string>
    <string name="purchase_start">Subscribe</string>
    <string name="purchase_header">Premium Subscription</string>
    <string name="purchase_increases_1">Unlimited usage amount</string>
    <string name="purchase_increases_2">Unlimited message groups</string>
    <string name="purchase_increases_3">Removal of impediment ads</string>
    <string name="purchase_dot_1">Unsubscribe at any time</string>
    <string name="purchase_dot_2">3 days of grace</string>
    <string name="purchase_important_advice">This app gives you a lot of power to use. Use it with caution.</string>
</resources>